--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,10 @@
 	<div id="post">
 		<h1>Este es el título atractivo e interesante del post </h1>
 		<p> Y este es el parrafo de inicio donde vamos a explicar las coasas increibles que se pueden hacer con ramas</p>
-    	</div>
+    <p> Los blog son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencas o salir en youtube.
+      Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora
+    </p>
+  </div>
     </div>  
   </body>
   </html>
