--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
   <div id="cabecera">
     Hiperblog
     <span id="cabecera">
-      Tu blog de confianza
+      Tu blog de cabecera
     </span>
   </div>	
   <div id="post">
