Agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,7 @@
   <div id="cabecera">
     Hiperblog
     <span id="cabecera">
-      Tu blog de confianza
+      Tu blog de maestro
     </span>
   </div>	
   <div id="post">
@@ -17,6 +17,9 @@
 		<p> Y este es el parrafo de inicio donde vamos a explicar las coasas increibles que se pueden hacer con ramas</p>
     <p> Los blog son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencas o salir en youtube.
       Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora
+    </p>
+    <p>
+      Suscribete y dale like
     </p>
   </div>
     </div>  
