--- a/blogpost.html
+++ b/blogpost.html
@@ -1,27 +1,29 @@
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Bienvenido a Hyperblog 2.0</title>
     <link rel="stylesheet" href="css/estilos.css" />
   </head>
   <body>
     <div id="container">
-  <div id="cabecera">
-    Hiperblog
-    <span id="cabecera">
-      Tu blog de cabecera
-    </span>
-  </div>	
-  <div id="post">
-		<h1>Este es el título atractivo e interesante del post </h1>
-		<p> Y este es el parrafo de inicio donde vamos a explicar las coasas increibles que se pueden hacer con ramas</p>
-    <p> Los blog son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencas o salir en youtube.
-      Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora
-    </p>
-    <p>
-      Suscribete y dale like
-    </p>
-  </div>
-    </div>  
+      <div id="cabecera">
+        <img id="logo" src="imagenes/spacex.png" />
+        Hiperblog
+        <span id="cabecera"> Tu blog de cabecera </span>
+      </div>
+      <div id="post">
+        <h1>Este es el título atractivo e interesante del post</h1>
+        <p>
+          Y este es el parrafo de inicio donde vamos a explicar las coasas
+          increibles que se pueden hacer con ramas
+        </p>
+        <p>
+          Los blog son la mejor forma de compartir informacion y tus ideas.
+          Mucho mas que ir a conferencas o salir en youtube. Excepto si eres un
+          rockstar. Pero estadisticamente no lo eres... por ahora
+        </p>
+        <p>Suscribete y dale like</p>
+      </div>
+    </div>
   </body>
-  </html>
+</html>
